--- a/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
+++ b/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
@@ -12,6 +12,7 @@
 <body>
     @{
         Html.RenderPartial("_Navbar");
+        Html.RenderPartial("_Sidebar");
     }
     <div class="container body-content">
         @RenderBody()
