--- a/TestExcel/Views/TimeSchedule/Index.cshtml
+++ b/TestExcel/Views/TimeSchedule/Index.cshtml
@@ -8,6 +8,7 @@
     int m = 0;
     string textcreadit = "";
     string[] date = { "M", "T", "W", "H", "F", "S" };
+    Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
 }
 <script>
     $(document).ready(function () {
